// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Finished /> Basic Init 1`] = `
<span
  title="2016-01-01 00:00:00"
>
  5 minutes ago
</span>
`;

exports[`<Finished /> Finished with icon 1`] = `
<span
  title="2016-01-01 00:00:00"
>
  <i
    className="fa fa-calendar finished-icon"
  />
  5 minutes ago
</span>
`;

exports[`<Finished /> No datetime provided 1`] = `
<span
  title=""
>
  N/A
</span>
`;
